--- a/index.html
+++ b/index.html
@@ -215,24 +215,29 @@
           </p>
         </div>
 
-        <form class="form"
-              action="https://docs.google.com/forms/d/e/1FAIpQLSfb2ByA4yZh_9AUo3YfTEdOt4g6ztmFFnoT82YfVi_H4oAmYg/formResponse"
-              method="post"
-              target="_blank">
-        <label>
-          Name
-          <input type="text" name="entry.123456789" required />
-        </label>
-        <label>
-          Email
-          <input type="email" name="entry.987654321" required />
-        </label>
-        <label>
-          Message
-          <textarea name="entry.555666777" rows="5" required></textarea>
-        </label>
-        <button class="btn btn-primary" type="submit">Send</button>
-      </form>
+<form class="form"
+  action="https://docs.google.com/forms/d/e/1FAIpQLSfb2ByA4yZh_9AUo3YfTEdOt4g6ztmFFnoT82YfVi_H4oAmYg/formResponse"
+  method="POST"
+  target="_blank">
+
+  <label>
+    Name
+    <input type="text" name="entry.123456789" required />
+  </label>
+
+  <label>
+    Email
+    <input type="email" name="entry.987654321" required />
+  </label>
+
+  <label>
+    Message
+    <textarea name="entry.555666777" rows="5" required></textarea>
+  </label>
+
+  <button class="btn btn-primary" type="submit">Send</button>
+</form>
+
       </div>
     </section>
 
@@ -389,6 +394,7 @@
   </script>
 </body>
 </html>
+
 
 
 
