--- a/index.html
+++ b/index.html
@@ -1,1 +1,396 @@
-<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>Enhanced SEO for Aboard</title>\n    <meta name="description" content="Aboard is an open platform that enriches your tasks with organization and management tools.">\n    <meta name="keywords" content="Aboard, organization, management, productivity">\n    <meta name="author" content="Wenlinhan">\n    <meta name="robots" content="index, follow">\n    <meta property="og:title" content="Enhanced SEO for Aboard">\n    <meta property="og:description" content="Aboard is an open platform that enriches your tasks with organization and management tools.">\n    <meta property="og:type" content="website">\n    <meta property="og:url" content="https://aaboard.org">\n    <meta property="og:image" content="https://aaboard.org/image.jpg">\n    <meta name="twitter:card" content="summary_large_image">\n    <meta name="twitter:title" content="Enhanced SEO for Aboard">\n    <meta name="twitter:description" content="Aboard is an open platform that enriches your tasks with organization and management tools.">\n    <meta name="twitter:image" content="https://aaboard.org/image.jpg">\n    <script type="application/ld+json">\n    {\n      "@context": "https://schema.org",\n      "@type": "Organization",\n      "name": "Aboard",\n      "url": "https://aaboard.org",\n      "logo": "https://aaboard.org/logo.png",\n      "sameAs": [\n        "https://www.facebook.com/yourpage",\n        "https://twitter.com/yourprofile",\n        "https://www.linkedin.com/in/yourprofile"\n      ]\n    }\n    </script>\n</head>\n<body>\n    <!-- Body content goes here -->\n</body>\n</html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>AI Assessment Board (AAB)</title>
+  <meta name="description" content="AAB is a nonprofit initiative documenting and supporting shared understanding of AI capabilities in education." />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <!-- Header -->
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="#">
+        <img class="brand-mark" src="assets/AAB transparent.png" alt="AI Assessment Board logo" />
+        <span class="brand-text">AI Assessment Board (AAB)</span>
+      </a>
+
+      <nav class="nav" aria-label="Primary">
+        <a href="#about">About</a>
+        <a href="#case-registry">Case Registry</a>
+        <a href="#pilot-registry">Pilot Registry</a>
+        <a href="#get-involved">Get Involved</a>
+      </nav>
+
+      <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">
+        ☰
+      </button>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <main>
+    <section class="hero">
+      <div class="hero-bg" aria-hidden="true"></div>
+      <div class="container hero-inner">
+        <h1>Understanding AI in Education</h1>
+        <p class="lead">
+          Documenting real-world practices, exploring emerging pilots, supporting shared insights.
+        </p>
+        <div class="hero-actions">
+          <a class="btn btn-ghost" href="#about">Learn More</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- 3 Feature Cards -->
+    <section class="section">
+      <div class="container">
+        <div class="cards-3">
+          <article class="card">
+            <div class="card-icon" aria-hidden="true">
+              <img class="card-icon-img" src="assets/icon-case-pilot-registry.svg" alt="" />
+            </div>
+            <h3>Case &amp; Pilot Registry</h3>
+            <p>A public record of real AI education initiatives.</p>
+          </article>
+
+          <article class="card">
+            <div class="card-icon" aria-hidden="true">
+              <img class="card-icon-img" src="assets/icon-research-briefs.svg" alt="" />
+            </div>
+            <h3>Research Briefs</h3>
+            <p>Independent reports on trends and practices.</p>
+          </article>
+
+          <article class="card">
+            <div class="card-icon" aria-hidden="true">
+              <img class="card-icon-img" src="assets/icon-community-dialogues.svg" alt="" />
+            </div>
+            <h3>Community Dialogues</h3>
+            <p>Bringing educators and experts together.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- About Split -->
+    <section id="about" class="section section-alt">
+      <div class="container split">
+        <div class="split-text">
+          <h2>What is AAB?</h2>
+          <p>
+            The AI Assessment Board (AAB) is a nonprofit initiative focused on documenting and supporting
+            understanding of AI capabilities in educational contexts.
+          </p>
+          <p>
+            Our work is independent, transparent, and public-interest driven. 
+          </p>
+          <a class="btn btn-secondary" href="#process">Read More</a>
+        </div>
+
+        <div class="split-media">
+          <img src="assets/teachers.png" alt="Teachers and students in a classroom" />
+        </div>
+      </div>
+    </section>
+
+    <!-- Registry Preview -->
+    <section id="case-registry" class="section">
+      <div class="container split">
+        <div class="split-text">
+          <h2>Case Registry</h2>
+          <p>
+            A curated collection of verified AI education cases from real-world settings.
+            Cases are collected and reviewed from university faculty, researchers, and experienced AI-education practitioners through documented research projects and instructional programs.
+          </p>
+
+        </div>
+
+        <div class="split-panel">
+          <h3 class="panel-title">Case Entries</h3>
+          <ul class="list">
+            <li><a href="cases/Yorba Linda Public Library AI Storytime/AAB-CASE-2025-LL-001.html">Yorba Linda Public Library AI Storytime</a></li>
+            <li><a href="cases/Afterschool Mini AI Summer Camp K-2/AAB-CASE-2025-LL-002.html">Afterschool Mini AI Summer Camp K-2</a></li>
+            <li><a href="cases/Grades 3-5 Elementary Afterschool Mini AI Summer Camp/AAB-CASE-2025-LL-003.html">Grades 3-5 Elementary Afterschool Mini AI Summer Camp</a></li>
+            <li><a href="cases/Grades 6-9 Middle School Afterschool Mini AI Summer Camp/AAB-CASE-2025-LL-004.html">Grades 6-9 Middle School Afterschool Mini AI Summer Camp</a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Pilot Registry -->
+    <section id="pilot-registry" class="section section-alt">
+      <div class="container split">
+        <div class="split-text">
+          <h2>Pilot Registry</h2>
+          <p>
+            A record of structured AI education pilots conducted with institutional and practitioner partners.
+          </p>
+          <p>
+            Pilots follow defined goals and implementation plans and contribute evidence toward future assessment frameworks.
+          </p>
+
+        </div>
+        <div class="split-panel">
+          <h3 class="panel-title">Pilot Entries</h3>
+          <ul class="list">
+            <li><a href="pilots/TPG PreK and Level 1/AAB-PILOT-2025-TPG-001.html">TPG PreK and Level 1</a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Process -->
+    <section id="process" class="section">
+      <div class="container">
+        <h2>Our Process</h2>
+        <p> From Innovation to Standardization: The AAB Case & Pilot Registry provides structured, de-identified documentation of real-world AI education practices that researchers can cite to study design patterns, adoption contexts, and emerging standards—without functioning as a human-subjects research dataset</p>
+        <div class="process-grid" role="list" aria-label="AAB process stages">
+          <article class="process-step" role="listitem">
+            <div class="process-icon">
+              <img class="process-icon-image" src="assets/research-registry-icon.svg" alt="Research and registry icon" />
+            </div>
+            <h3>Research &amp; Registry</h3>
+          </article>
+          <article class="process-step" role="listitem">
+            <div class="process-icon">
+              <img class="process-icon-image" src="assets/evidence-collection-icon.svg" alt="Evidence collection icon" />
+            </div>
+            <h3>Evidence Collection</h3>
+          </article>
+          <article class="process-step" role="listitem">
+            <div class="process-icon">
+              <img class="process-icon-image" src="assets/pattern-analysis-icon.svg" alt="Pattern analysis icon" />
+            </div>
+            <h3>Pattern Analysis</h3>
+          </article>
+          <article class="process-step" role="listitem">
+            <div class="process-icon">
+              <img class="process-icon-image" src="assets/standard-development-icon.svg" alt="Standard development icon" />
+            </div>
+            <h3>Standard Development</h3>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Principles -->
+    <section id="principles" class="section section-alt">
+      <div class="container">
+        <h2>Our Principles</h2>
+        <div class="principles">
+          <div class="principle">
+            <h3>Independence</h3>
+            <p>AAB operates independently of commercial, political, or institutional control.</p>
+          </div>
+          <div class="principle">
+            <h3>Neutrality</h3>
+            <p>Documentation does not favor specific tools, platforms, or providers.</p>
+          </div>
+          <div class="principle">
+            <h3>Transparency</h3>
+            <p>Methods, assumptions, and limitations are made explicit.</p>
+          </div>
+          <div class="principle">
+            <h3>Public Interest</h3>
+            <p>We prioritize shared understanding over private advantage.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Get Involved + Contact -->
+    <section id="get-involved" class="section section-alt">
+      <div class="container split">
+        <div id="contact" class="sr-only" aria-hidden="true"></div>
+        <div class="split-text">
+          <h2>Get Involved</h2>
+          <p>
+            Contribute to our registry, join discussions, collaborate on documentation and research,
+            or support AAB’s early work.
+            Send us a message.
+          </p>
+        </div>
+
+<form class="form"
+  action="https://docs.google.com/forms/d/e/1FAIpQLSfb2ByA4yZh_9AUo3YfTEdOt4g6ztmFFnoT82YfVi_H4oAmYg/formResponse"
+  method="POST"
+  target="_blank">
+
+  <label>
+    Name
+    <input type="text" name="entry.2068210611" required />
+  </label>
+
+  <label>
+    Email
+    <input type="email" name="entry.1766074877" required />
+  </label>
+
+  <label>
+    Message
+    <textarea name="entry.573862924" rows="5" required></textarea>
+  </label>
+
+  <button class="btn btn-primary" type="submit">Send</button>
+</form>
+
+      </div>
+    </section>
+
+    <!-- Support (placeholder anchor) -->
+    <div id="support" class="sr-only" aria-hidden="true"></div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>© <span id="year"></span> AI Assessment Board. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="privacy-policy.html">Privacy Policy</a>
+        <a href="terms-of-use.html">Terms of Use</a>
+      </div>
+    </div>
+  </footer>
+
+  <script id="registry-filter-schema" type="application/json">
+  {
+    "version": "1.0.0",
+    "registries": {
+      "case": {
+        "label": "Case Registry",
+        "enabled_filters": [
+          "education_level",
+          "subject_area",
+          "use_case_type",
+          "stakeholder_group",
+          "ai_capability_type",
+          "implementation_model",
+          "governance_safety_focus",
+          "evidence_type",
+          "outcomes_domain",
+          "constraints_risks",
+          "replicability_assets"
+        ]
+      },
+      "pilot": {
+        "label": "Pilot Registry",
+        "enabled_filters": [
+          "education_level",
+          "subject_area",
+          "use_case_type",
+          "pilot_stage",
+          "stakeholder_group",
+          "ai_capability_type",
+          "implementation_model",
+          "governance_safety_focus",
+          "evidence_type",
+          "outcomes_domain",
+          "constraints_risks",
+          "replicability_assets"
+        ]
+      }
+    },
+    "filters": [
+      {
+        "id": "education_level",
+        "label": "Education Level",
+        "type": "multi_select",
+        "options": ["K-5", "6-8", "9-12", "Higher Ed", "Adult/Workforce"]
+      },
+      {
+        "id": "subject_area",
+        "label": "Subject Area",
+        "type": "multi_select",
+        "options": ["STEM", "Humanities", "Arts", "Career/Technical", "Cross-curricular"]
+      },
+      {
+        "id": "use_case_type",
+        "label": "Use Case Type",
+        "type": "multi_select",
+        "options": ["Instructional support", "Assessment", "Feedback", "Content creation", "Administrative workflow"]
+      },
+      {
+        "id": "pilot_stage",
+        "label": "Pilot Stage",
+        "type": "multi_select",
+        "options": ["Design", "Limited pilot", "Expanded pilot", "Operational"]
+      },
+      {
+        "id": "stakeholder_group",
+        "label": "Stakeholder Group",
+        "type": "multi_select",
+        "options": ["Teachers", "Students", "Administrators", "Counselors", "IT"]
+      },
+      {
+        "id": "ai_capability_type",
+        "label": "AI Capability Type",
+        "type": "multi_select",
+        "options": ["LLM/Chat", "Tutoring/Adaptive", "Analytics", "Multimodal", "Automation"]
+      },
+      {
+        "id": "implementation_model",
+        "label": "Implementation Model",
+        "type": "multi_select",
+        "options": ["Classroom-level", "Department-level", "School-wide", "District/System-wide"]
+      },
+      {
+        "id": "governance_safety_focus",
+        "label": "Governance and Safety Focus",
+        "type": "multi_select",
+        "options": ["Privacy/Data handling", "Bias/Fairness", "Academic integrity", "Accessibility"]
+      },
+      {
+        "id": "evidence_type",
+        "label": "Evidence Type",
+        "type": "multi_select",
+        "options": ["Anecdotal", "Survey", "Usage metrics", "Learning outcomes", "Mixed methods"]
+      },
+      {
+        "id": "outcomes_domain",
+        "label": "Outcomes Domain",
+        "type": "multi_select",
+        "options": ["Learning impact", "Teacher workload", "Engagement", "Equity/Access", "Cost/Efficiency"]
+      },
+      {
+        "id": "constraints_risks",
+        "label": "Constraints and Risks",
+        "type": "multi_select",
+        "options": ["Policy limits", "Technical limits", "Adoption barriers", "Unintended effects"]
+      },
+      {
+        "id": "replicability_assets",
+        "label": "Replicability Assets",
+        "type": "multi_select",
+        "options": ["Playbook available", "Templates", "Rubric", "Training materials", "None"]
+      }
+    ],
+    "ui_defaults": {
+      "selection_mode": "multi",
+      "show_counts": true,
+      "sort": "newest_first"
+    }
+  }
+  </script>
+
+  <script>
+    // Expose schema for upcoming Case/Pilot filter UI.
+    const schemaEl = document.getElementById("registry-filter-schema");
+    window.AABRegistryFilterSchema = JSON.parse(schemaEl.textContent);
+
+    // Footer year
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    // Mobile nav toggle
+    const toggle = document.querySelector(".nav-toggle");
+    const nav = document.querySelector(".nav");
+    toggle.addEventListener("click", () => {
+      const open = nav.classList.toggle("nav-open");
+      toggle.setAttribute("aria-expanded", String(open));
+    });
+  </script>
+</body>
+</html>
